--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
       </p>
     </article>
   </main>
+</body>
+<footer>
   <div class="attribution">
     <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p> 
     <p>Coded by <a href="https://github.com/Fontler">Alexander Fontler</a>.</p>
   </div>
-</body>
+</footer>
 </html>
