--- a/index.html
+++ b/index.html
@@ -92,10 +92,8 @@
     </article>
   </main>
 </body>
-<footer>
-  <div class="attribution">
-    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p> 
-    <p>Coded by <a href="https://github.com/Fontler">Alexander Fontler</a>.</p>
-  </div>
+<footer class="attribution">
+  <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p> 
+  <p>Coded by <a href="https://github.com/Fontler">Alexander Fontler</a>.</p>
 </footer>
 </html>
