Add hidden h1 for accessablitly report

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <main class="testimonials-grid">
+    <h1 style="display: none">Testimonials Grid Challenge</h1>
     <article class="card purple">
       <div class="author">
         <img class="author-img" src="images/image-daniel.jpg" alt="A close portrait of Daniel Clifford">
@@ -72,7 +73,7 @@
         “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”
       </p>
     </article>
-  
+    
     <article class="card white long">
       <div class="author">
         <img class="author-img" src="images/image-kira.jpg" alt="A close portrait of Kira Whittle">
