--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 style="display: none">Testimonials Grid Challenge</h1>
+  <h1 style="visibility: hidden;">Testimonials Grid Challenge</h1>
   <main class="testimonials-grid">
     <article class="card purple">
       <div class="author">
